--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,48 @@ img{
 body{
 	overflow-x: hidden;
 }
+#header{
+	background-color:#bdc3c7;
+}
 
 .container{
 	max-width: 80%;
 	margin: auto;
+}
+
+
+.header{
+	display: flex;
+
+}
+.header .nav_logo{
+	width: 15%;
+}
+.header .nav_logo h1{
+	padding: 20px 15px;
+}
+
+.header .nav_menu{
+	width: 85%;
+}
+.header .nav_menu ul{
+	display: flex;
+	justify-content: flex-end;
+}
+.header .nav_menu ul a{
+	display: block;
+	padding: 25px 15px;
+	color: black;
+}
+
+.header .nav_menu ul a:hover{
+	background-color: #2c3e50;
+	color: #f5f6fa;
+}
+
+#banner{
+	background-image: url(../img/portfolio.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
