removed the banner content

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body{
 	padding: 250px 0px;
 }
 
-.bnr_content h2{
+/*.bnr_content h2{
 	color: white;
 	text-align: right;
 	padding: 25px 50px;
@@ -74,4 +74,4 @@ body{
 .bnr_content p{
 	color: white;
 	text-align: right;
-}
+}*/
